# spells

./: Cargo.toml  README.md
client/: -all  Cargo.toml
client/src/: :w  main.rs
client/src/cameras/: follow_cam.rs  free_cam.rs  mod.rs
client/src/controls/: follow_cam.rs  free_cam.rs  mod.rs  wish_dir.rs
client/src/debug/: mod.rs
client/src/dev_scenes/: dev_follow_cam.rs  dev_game_ui.rs  dev_replication.rs  mod.rs
client/src/editor/: mod.rs
client/src/events/: mod.rs
client/src/game/: controls.rs  map.rs  mod.rs  render.rs  replication.rs
client/src/input/: mod.rs
client/src/render/: map.rs  (+2 more)
docs/: design.drawio
lib_spells/: Cargo.toml  log
lib_spells/src/: alignment.rs  lib.rs  message_stream.rs  net.rs  shared.rs  tcp_stream.rs
lib_spells/src/net/: mod.rs  packet.rs
server/: .gitignore  2  Cargo.toml
server/src/: main.rs
server/src/game/: mod.rs
server/src/game/alignment/: mod.rs
server/src/game/assets/: auras.rs  mod.rs  spells.rs
server/src/game/auras/: effect_application.rs  effect_creation.rs  mod.rs  resource.rs  ticking_hp.rs
server/src/game/components/: alignment.rs  mod.rs
server/src/game/effect_application/: mod.rs
server/src/game/effect_creation/: auras.rs  mod.rs  spells.rs
server/src/game/effect_processing/: mod.rs
server/src/game/effects/: effect_processing.rs  mod.rs
server/src/game/entity_processing/: mod.rs
server/src/game/events/: mod.rs
server/src/game/health/: effect_applications.rs  entity_processing.rs  mod.rs
server/src/game/net/: mod.rs  movement.rs  packet.rs
server/src/game/net/serialize/: mod.rs
server/src/game/net/server/: connected_clients.rs  mod.rs  pending_clients.rs  tcp_stream.rs
server/src/game/net/server/connection_manager/: connected_clients.rs  mod.rs  pending_clients.rs  tcp_stream.rs
server/src/game/net/server/packet/: mod.rs
server/src/game/net/socket/: client_server.rs  client_stream.rs  mod.rs
server/src/game/scenes/: mod.rs
server/src/game/serialize/: mod.rs
server/src/game/socket/: client_getter.rs  client_server.rs  client_stream.rs  mod.rs
server/src/game/spells/: casting.rs  effect_creation.rs  mod.rs  resource.rs  spell_application.rs
server/src/game/world/: mod.rs  sender.rs
src/: main.rs  resources.rs  tests.rs
src/client/: main.rs
src/game/: auras.rs  cleanup.rs  health.rs  mod.rs  resources.rs  spellcasting.rs  spells.rs  status_effect.rs
(+48 files in other folders)
