[package]
name = "lib_spells"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
bincode = "1.3.3"
mio = { version = "0.8.11", features = ["os-poll", "net"] }
strum_macros = "0.26.2"
bevy_ecs = { version = "0.13.2", features = [] }
bevy_math = { version = "0.13.2", features = ["serialize"] }
bevy_time = { version = "0.13.2", features = ["serialize"] }
