[package]
name = "spells-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.1" }
bincode = "1.3.3"
mio = { version = "0.8.11", features = ["os-poll", "net"] }
serde = { version = "1.0.197", features = ["derive"] }
