[package]
name = "spells-server"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.1", default-features = false, features = ["multi-threaded", "bevy_asset", "dynamic_linking", "bevy_debug_stepping"]}
mio = { version = "0.8.11", features = ["os-poll", "net"] }
lib_spells = { version = "*", path = "../lib_spells" }
strum_macros = "0.26.2"
